@@ -1,21 +1,0 @@
-language: perl
-perl:
- - "5.8"
- - "5.10"
- - "5.12"
- - "5.14"
- - "5.16"
- - "5.18"
- - "5.20"
- - "5.22"
- - "5.24"
-notifications:
-    email:
-        on_success: "change"
-        on_failure: "always"
-env: AUTHOR_TESTING=1 RELEASE_TESTING=1 AUTOMATED_TESTING=1 EXTENDED_TESTING=1
-sudo: false
-branches:
-    only:
-        - master
-        - dev
