@@ -1,6 +1,7 @@
 Revision history for Perl module {{$dist->name}}
 
 {{$NEXT}}
+  * Removed travis-ci
 
 0.009     2026-01-16
   * Force use of archive-tar to prevent issues on MacOs
